--- a/slides/reveal/css/reveal.css
+++ b/slides/reveal/css/reveal.css
@@ -62,6 +62,13 @@ body {
 	text-shadow: none;
 }
 
+:fullscreen {
+	background: transparent;
+}
+
+:fullscreen::backdrop {
+	background: transparent;
+}
 
 /*********************************************
  * HEADERS
@@ -1219,7 +1226,7 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: rgba( 0, 0, 0, 0 );
+	/*background: rgba( 0, 0, 0, 0 );*/
 
 	-webkit-transition: background 800ms ease;
 	   -moz-transition: background 800ms ease;
@@ -1259,11 +1266,11 @@ body {
 /*********************************************
  * PER-SLIDE BACKGROUNDS
  *********************************************/
-
 .reveal>.backgrounds {
 	position: absolute;
 	width: 100%;
 	height: 100%;
+	background: white;
 }
 	.reveal .slide-background {
 		position: absolute;
@@ -1283,7 +1290,7 @@ body {
 		     -o-transition: all 600ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 		        transition: all 600ms cubic-bezier(0.260, 0.860, 0.440, 0.985);
 	}
-	.reveal .slide-background.present {
+	:-webkit-full-screen .reveal .slide-background.present, .reveal .slide-background.present {
 		opacity: 1;
 		visibility: visible;
 	}
