--- a/slides/reveal/css/reveal.css
+++ b/slides/reveal/css/reveal.css
@@ -492,8 +492,12 @@ body {
 	position: relative;
 	width: 100%;
 	height: 100%;
-
+	background: #FFF;
 	-ms-touch-action: none;
+}
+
+.title .reveal {
+	background: #19B8D2;
 }
 
 .reveal .slides {
@@ -1270,7 +1274,6 @@ body {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background: white;
 }
 	.reveal .slide-background {
 		position: absolute;
